--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Ignore Sublime project file.
+/yvgc.sublime-project
+/yvgc.sublime-workspace
