--- a/test/fixtures/platforms.yml
+++ b/test/fixtures/platforms.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  igdb_id: 1
   name: MyString
 
 two:
+  igdb_id: 1
   name: MyString
