revert change database.yml

--- a/config/database.yml
+++ b/config/database.yml
@@ -78,13 +78,8 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
-#production:
-#  <<: *default
-#  database: yvgc_production
-#  username: yvgc
-#  password: <%= ENV['YVGC_DATABASE_PASSWORD'] %>  
 production:
   <<: *default
-  database: sht_database
-  username: stillhavethem
-  password: andy21
+  database: yvgc_production
+  username: yvgc
+  password: <%= ENV['YVGC_DATABASE_PASSWORD'] %>
